Add binaries for Rocky Linux
Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab/test.yml
+++ b/.gitlab/test.yml
@@ -57,6 +57,13 @@
   after_script:
     - apt-get -y remove cinc-auditor
 
+.test:rockylinux:
+  extends: .test
+  before_script:
+    - yum -y install data/rocky/${PLATFORM_VER}/cinc*.rpm
+  after_script:
+    - yum -y remove cinc
+
 .test:windows:
   stage: test
   tags:
