--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -283,6 +283,48 @@ package:opensuse-15:aarch64:
     PLATFORM_VER: "15"
     OMNIBUS_FIPS_MODE: "false"
 
+package:rockylinux-8:x86_64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  cache:
+    key: rockylinux-8-x86_64-cinc-auditor-5
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "8"
+
+package:rockylinux-8:aarch64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  cache:
+    key: rockylinux-8-aarch64-cinc-auditor-5
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "8"
+    OMNIBUS_FIPS_MODE: "false"
+
+package:rockylinux-9:x86_64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  cache:
+    key: rockylinux-9-x86_64-cinc-auditor-5
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "9"
+
+package:rockylinux-9:aarch64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  cache:
+    key: rockylinux-9-aarch64-cinc-auditor-5
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "9"
+    OMNIBUS_FIPS_MODE: "false"
+
 package:windows-2016:
   extends: .package:windows
   cache:
@@ -557,6 +599,46 @@ test:opensuse-15:aarch64:
   variables:
     PLATFORM_VER: "15"
 
+test:rockylinux-8:x86_64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  needs:
+    - package:rockylinux-8:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "8"
+
+test:rockylinux-8:aarch64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  needs:
+    - package:rockylinux-8:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "8"
+
+test:rockylinux-9:x86_64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  needs:
+    - package:rockylinux-9:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "9"
+
+test:rockylinux-9:aarch64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  needs:
+    - package:rockylinux-9:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "9"
+
 test:ubuntu-20.04:x86_64:
   extends: .test:ubuntu
   image: cincproject/omnibus-ubuntu:20.04
@@ -678,6 +760,10 @@ deploy:
     - package:macos-13:aarch64
     - package:opensuse-15:x86_64
     - package:opensuse-15:aarch64
+    - package:rockylinux-8:aarch64
+    - package:rockylinux-8:x86_64
+    - package:rockylinux-9:aarch64
+    - package:rockylinux-9:x86_64
     - package:source
     - package:ubuntu-20.04:x86_64
     - package:ubuntu-20.04:aarch64
