--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -203,17 +203,6 @@ package:debian-12:aarch64:
     PLATFORM_VER: "12"
     OMNIBUS_FIPS_MODE: "false"
 
-package:macos-11:
-  extends: .package:macos
-  cache:
-    key: macos-11
-  tags:
-    - macos-11
-  needs:
-    - patch
-  variables:
-    PLATFORM_VER: "11"
-
 package:macos-12:
   extends: .package:macos
   cache:
@@ -257,6 +246,50 @@ package:macos-13:aarch64:
     - patch
   variables:
     PLATFORM_VER: "13"
+
+package:macos-14:
+  extends: .package:macos
+  cache:
+    key: macos-14-cinc-auditor-5
+  tags:
+    - macos-14
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "14"
+
+package:macos-14:aarch64:
+  extends: .package:macos
+  cache:
+    key: macos-14-aarch64-cinc-auditor-5
+  tags:
+    - macos-14-aarch64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "14"
+
+package:macos-15:
+  extends: .package:macos
+  cache:
+    key: macos-15-cinc-auditor-5
+  tags:
+    - macos-15
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "15"
+
+package:macos-15:aarch64:
+  extends: .package:macos
+  cache:
+    key: macos-15-aarch64-cinc-auditor-5
+  tags:
+    - macos-15-aarch64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "15"
 
 package:opensuse-15:x86_64:
   extends: .package:opensuse
@@ -534,15 +567,6 @@ test:debian-12:aarch64:
   variables:
     PLATFORM_VER: "12"
 
-test:macos-11:
-  extends: .test:macos
-  tags:
-    - macos-11
-  needs:
-    - package:macos-11
-  variables:
-    PLATFORM_VER: "11"
-
 test:macos-12:
   extends: .test:macos
   tags:
@@ -578,6 +602,42 @@ test:macos-13:aarch64:
     - package:macos-13:aarch64
   variables:
     PLATFORM_VER: "13"
+
+test:macos-14:
+  extends: .test:macos
+  tags:
+    - macos-14
+  needs:
+    - package:macos-14
+  variables:
+    PLATFORM_VER: "14"
+
+test:macos-14:aarch64:
+  extends: .test:macos
+  tags:
+    - macos-14-aarch64
+  needs:
+    - package:macos-14:aarch64
+  variables:
+    PLATFORM_VER: "14"
+
+test:macos-15:
+  extends: .test:macos
+  tags:
+    - macos-15
+  needs:
+    - package:macos-15
+  variables:
+    PLATFORM_VER: "15"
+
+test:macos-15:aarch64:
+  extends: .test:macos
+  tags:
+    - macos-15-aarch64
+  needs:
+    - package:macos-15:aarch64
+  variables:
+    PLATFORM_VER: "15"
 
 test:opensuse-15:x86_64:
   extends: .test:opensuse
@@ -753,11 +813,14 @@ deploy:
     - package:debian-11:aarch64
     - package:debian-12:x86_64
     - package:debian-12:aarch64
-    - package:macos-11
     - package:macos-12
     - package:macos-12:aarch64
     - package:macos-13
     - package:macos-13:aarch64
+    - package:macos-14
+    - package:macos-14:aarch64
+    - package:macos-15
+    - package:macos-15:aarch64
     - package:opensuse-15:x86_64
     - package:opensuse-15:aarch64
     - package:rockylinux-8:aarch64
@@ -857,11 +920,6 @@ publish-docker:
     - sudo rm -rf inspec/
     - sudo rm -rf ${CI_PROJECT_DIR}/cinc-project/distribution/auditor/
 
-cleanup:macos-11:
-  extends: .cleanup
-  tags:
-    - macos-11
-
 cleanup:macos-12:
   extends: .cleanup
   tags:
@@ -881,3 +939,23 @@ cleanup:macos-13-aarch64:
   extends: .cleanup
   tags:
     - macos-13-aarch64
+
+cleanup:macos-14:
+  extends: .cleanup
+  tags:
+    - macos-14
+
+cleanup:macos-14-aarch64:
+  extends: .cleanup
+  tags:
+    - macos-14-aarch64
+
+cleanup:macos-15:
+  extends: .cleanup
+  tags:
+    - macos-15
+
+cleanup:macos-15-aarch64:
+  extends: .cleanup
+  tags:
+    - macos-15-aarch64
